k8s/pihole/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
spec:
  replicas: 1
  template:
    spec:
      containers: 
      - name: pihole
        image: pihole/pihole
        volumeMounts:
        - name: data
          mountPath: /etc/pihole
        - name: dns
          mountPath: /etc/dnsmasq.d
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: pihole-data-pvc
      - name: dns
        persistentVolumeClaim:
          claimName: pihole-dns-pvc
