k8s/pihole/service.yml
apiVersion: v1
kind: Service
metadata:
  name: pihole-web-ui
spec:
  type: LoadBalancer
  ports: 
  - name: web-ui
    protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
spec:
  externalIPs:
  - 192.168.10.161
  ports: 
  - name: dns-tcp
    protocol: TCP
    port: 53
    targetPort: 53

  - name: dns-udp
    protocol: UDP
    port: 53
    targetPort: 53
