k8s/pihole/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole
spec:
  rules:
  - host: pihole.homelab
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pihole-web-ui
            port:
              number: 80
